<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="view"
                type="com.example.inseptiontest.ui.devicebaseinformation.DeviceBaseInformContract.View" />
        <variable
                name="data"
                type="com.example.inseptiontest.ui.main.ChooseDeviceItemData" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.devicebaseinformation.DeviceInformationActivity">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_horizontal_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.13" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_horizontal_37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.37" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_horizontal_61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.61" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_vertical_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_vertical_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_vertical_95"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />


        <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_device_information_title_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                android:onClick="@{()->view.onBack()}"
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_device_information_back_button"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.2" />

        <!-- 公司、作業產廠、生產廠 -->
        <View
                android:id="@+id/view_company_data"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_information_device_data"
                app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_95"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toEndOf="@id/guide_line_vertical_5"
                app:layout_constraintTop_toBottomOf="@id/guide_line_horizontal_13" />

        <TextView
                android:id="@+id/text_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_company"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/text_job_site"
                app:layout_constraintStart_toEndOf="@id/guide_line_vertical_10"
                app:layout_constraintTop_toBottomOf="@+id/view_company_data" />

        <TextView
                android:id="@+id/text_company_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@={data.cONM}"
                app:layout_constraintTop_toTopOf="@id/text_company"
                app:layout_constraintBottom_toBottomOf="@id/text_company"
                app:layout_constraintStart_toEndOf="@id/text_company" />

        <TextView
                android:id="@+id/text_job_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_site"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/text_production_plant"
                app:layout_constraintStart_toEndOf="@id/guide_line_vertical_10"
                app:layout_constraintTop_toBottomOf="@+id/text_company" />

        <TextView
                android:id="@+id/text_job_site_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@={data.mNTFCT}"
                app:layout_constraintTop_toTopOf="@id/text_job_site"
                app:layout_constraintBottom_toBottomOf="@id/text_job_site"
                app:layout_constraintStart_toEndOf="@id/text_job_site" />

        <TextView
                android:id="@+id/text_production_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/production_plant"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/view_company_data"
                app:layout_constraintStart_toEndOf="@id/guide_line_vertical_10"
                app:layout_constraintTop_toBottomOf="@+id/text_job_site" />

        <TextView
                android:id="@+id/text_production_plant_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@={data.pMFCTNM}"
                app:layout_constraintTop_toTopOf="@id/text_production_plant"
                app:layout_constraintBottom_toBottomOf="@id/text_production_plant"
                app:layout_constraintStart_toEndOf="@id/text_production_plant" />

        <!-- 路線代號、路線名稱-->
        <View
                android:id="@+id/view_route"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_information_device_data"
                app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_95"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toEndOf="@id/guide_line_vertical_5"
                app:layout_constraintTop_toBottomOf="@id/guide_line_horizontal_37" />

        <TextView
                android:id="@+id/text_route_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_code"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/text_route_name"
                app:layout_constraintStart_toEndOf="@id/guide_line_vertical_10"
                app:layout_constraintTop_toBottomOf="@+id/view_route" />

        <TextView
                android:id="@+id/text_route_code_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@={data.wAYID}"
                app:layout_constraintTop_toTopOf="@id/text_route_code"
                app:layout_constraintBottom_toBottomOf="@id/text_route_code"
                app:layout_constraintStart_toEndOf="@id/text_route_code" />

        <TextView
                android:id="@+id/text_route_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_name"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/view_route"
                app:layout_constraintStart_toEndOf="@id/guide_line_vertical_10"
                app:layout_constraintTop_toBottomOf="@+id/text_route_code" />

        <TextView
                android:id="@+id/text_route_name_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@={data.wAYNM}"
                app:layout_constraintTop_toTopOf="@id/text_route_name"
                app:layout_constraintBottom_toBottomOf="@id/text_route_name"
                app:layout_constraintStart_toEndOf="@id/text_route_name" />

        <!-- 設備類別、設備編號、設備名稱 -->
        <View
                android:id="@+id/view_devices"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_information_device_data"
                app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_95"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toEndOf="@id/guide_line_vertical_5"
                app:layout_constraintTop_toBottomOf="@id/guide_line_horizontal_61" />

        <TextView
                android:id="@+id/text_device_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_category"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/text_device_number"
                app:layout_constraintStart_toEndOf="@id/guide_line_vertical_10"
                app:layout_constraintTop_toTopOf="@+id/view_devices" />

        <TextView
                android:id="@+id/text_device_category_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@={data.eQKD}"
                app:layout_constraintTop_toTopOf="@id/text_device_category"
                app:layout_constraintBottom_toBottomOf="@id/text_device_category"
                app:layout_constraintStart_toEndOf="@id/text_device_category" />

        <TextView
                android:id="@+id/text_device_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_number"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@id/guide_line_vertical_10"
                app:layout_constraintTop_toBottomOf="@id/text_device_category"
                app:layout_constraintBottom_toTopOf="@id/text_device_name" />

        <TextView
                android:id="@+id/text_device_number_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@={data.eQNO}"
                app:layout_constraintTop_toTopOf="@id/text_device_number"
                app:layout_constraintBottom_toBottomOf="@id/text_device_number"
                app:layout_constraintStart_toEndOf="@id/text_device_number" />

        <TextView
                android:id="@+id/text_device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@id/view_devices"
                app:layout_constraintStart_toEndOf="@id/guide_line_vertical_10"
                app:layout_constraintTop_toBottomOf="@id/text_device_number" />

        <TextView
                android:id="@+id/text_device_name_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@={data.eQNM}"
                app:layout_constraintTop_toTopOf="@id/text_device_name"
                app:layout_constraintBottom_toBottomOf="@id/text_device_name"
                app:layout_constraintStart_toEndOf="@id/text_device_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>